# attention_system

./: CMakeLists.txt  package.xml
attention_msgs/: CMakeLists.txt  package.xml
attention_msgs/srv/: ActivateAttention.srv
attention_system/: CMakeLists.txt  README.md  package.xml
attention_system/config/: params.yaml
attention_system/include/attention_system/: BaseController.hpp  PID.hpp
attention_system/launch/: attention_system_base.launch.py
attention_system/src/attention_system/: BaseController.cpp  PID.cpp
config/: params.yaml
include/attention_system/: BaseController.hpp
src/: base_main.cpp
src/attention_system/: BaseController.cpp
